--- a/Apr/2024-04-23.md
+++ b/Apr/2024-04-23.md
@@ -1,6 +1,5 @@
-# TIL Template
-
-## 날짜: 2024-04-23
+날짜: 2024-04-23
+ -------------------
 
 ### 스크럼
 - 학습 목표 1 : TIL 작성
@@ -10,29 +9,33 @@
 ### 새로 배운 내용
 #### 주제 1: express를 이용한 서버 구현
 #### 주제 2 : 게시글 수정할 때 input태그일 때는 js에서 value로 불러와야 함.
-    ```js
-        title.value = detail.title.substring(0,26);
-    ```
+```js
+title.value = detail.title.substring(0,26);
+```
 
 ### 오늘의 도전 과제와 해결 방법
-- 도전 과제 1 : 게시글 수정 게시판에서 사용자가 원래 첨부했던 이미지 파일명 가져오기
-    🫧 해결 못함... ㅎㅎ
-    ```html
-        <p>현재 이미지</p>
-        <img id="nowImage" src="image.jpg"/>
-        <form action="/upload" method="post" enctype="multipart/form-data">
-            <input type="file" id="imageUpload" name="image" accept="image/*">
-        </form>
-    ```
-    - img태그를 하나 더 넣어서 사용자가 올렸던 이미지를 보여줄까도 했는데 figma에 있는거와 완전 어긋나서 작성하지 않기로 했다.
-    - 기존 파일명을 띄워주고 사용자가 새로 업로드를 하면 파일명을 바꾸려고 했지만 안되서 결국 그냥 기존 파일명 없이 사용자가 새로 이미지를 추가하면 파일명이 띄워지게만 구현함
+##### 도전 과제 1 : 게시글 수정 게시판에서 사용자가 원래 첨부했던 이미지 파일명 가져오기
 
-- 도전 과제 2: 서버 구현해보기
-    - 개념
-        - MVC 패턴
-            - **Model** : 데이터 및 로직처리
-            - **View** : 사용자 인터페이스 처리
-            - **Controller** : 모델과 뷰의 중개 역할, 요청을 해당 모델로 안내 및 작업 완료 후 클라이언트로 응답
+
+  🫧 해결 못함... ㅎㅎ
+```html
+<p>현재 이미지</p>
+<img id="nowImage" src="image.jpg"/>
+<form action="/upload" method="post" enctype="multipart/form-data">
+    <input type="file" id="imageUpload" name="image" accept="image/*">
+</form>
+```
+- img태그를 하나 더 넣어서 사용자가 올렸던 이미지를 보여줄까도 했는데 figma에 있는거와 완전 어긋나서 작성하지 않기로 했다.
+- 기존 파일명을 띄워주고 사용자가 새로 업로드를 하면 파일명을 바꾸려고 했지만 안되서 결국 그냥 기존 파일명 없이 사용자가 새로 이미지를 추가하면 파일명이 띄워지게만 구현함
+
+
+
+##### 도전 과제 2: 서버 구현해보기
+- 개념
+    - MVC 패턴
+        - **Model** : 데이터 및 로직처리
+        - **View** : 사용자 인터페이스 처리
+        - **Controller** : 모델과 뷰의 중개 역할, 요청을 해당 모델로 안내 및 작업 완료 후 클라이언트로 응답
 
 ### 오늘의 회고
 - 서버 구현해보는게 처음이라서 매우매우 어려웠다.. 어디서부터 손대야할지도 모르겠었다! 그래도 새로 만들어서 처음부터 차근차근 따라해보니 어느정도 알 수 있었다.
